<resources>
    <string name="app_name">City Guide(chek application)</string>
    <string name="powered_by">BADAR UL DIN</string>
    <string name="slogan_name">We will help you to find you way</string>

    <!--    for Boarding Screen-->

    <!--   Titles-->
    <string name="first_slide_title">Search your Location</string>
    <string name="second_slide_title">Make a Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Let\'s enjoy</string>

    <!-- Description-->
    <string name="first_slide_desc">You can search any place in the city.</string>
    <string name="second_slide_desc">We will provide you almost all the emergency department and shopes phone numbers.</string>
    <string name="third_slide_desc">You can add a new shop or missing place.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As every thing is your pocket.</string>


    <!--   Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="lets_get_start">Let\'s get started</string>

    <!--    Categories-->
    <string name="hotels">Hotel</string>
    <string name="resturants">Resturant</string>
    <string name="shops">Shop</string>
    <string name="banks">Banks</string>
    <string name="edu">Eduction</string>
    <string name="airports">Airports</string>

    <!--    Description Text-->
    <string name="fratured_location">All Featured Locations</string>
    <string name="fratured_location_description">All the locations are frature and have top demand in City</string>
    <string name="most_viewe_location">Most Viewed</string>
    <string name="view_all">View All</string>
    <string name="catagories">Catagories</string>
    <string name="search_text">Search Now...!</string>
    <string name="new_credentials">new credentials</string>
</resources>