<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user_dashboard">
    <!--we should has to put our design in DrawerLayout so we can use NavigationView inside it.-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/card_color2"
        android:theme="@style/Navigation_my_color"
        app:headerLayout="@layout/menu_header"
        app:menu="@menu/main_menu" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/background_toolight">

            <ImageView
                android:id="@+id/menu_click_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/menu" />

            <ImageView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@drawable/add"
                android:onClick="RetailerStartUP"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:padding="20dp"
                        android:text="GET A WAY"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="8dp"
                        android:hint="@string/search_text"
                        android:padding="20dp"
                        android:textSize="25sp"
                        style="@style/ShapeAppearance.Material3.Corner.None"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="#00000000"
                        android:padding="30dp"
                        android:src="@drawable/search" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@drawable/ccard1"
                            android:src="@drawable/restaurant" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/resturants"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@drawable/ccard2"
                            android:src="@drawable/hotel" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hotels"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@drawable/ccard3"
                            android:src="@drawable/education" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edu"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:background="@drawable/ccard4"
                            android:src="@drawable/shopping" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shops"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@color/background_toolight">

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="150dp"
                        android:layout_height="310dp"
                        android:layout_margin="10dp"
                        android:background="@color/background_verylight"
                        android:gravity="left"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fratured_location"
                            android:textAllCaps="true"
                            android:textColor="@color/background_medium"
                            android:textSize="25sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:text="@string/fratured_location_description"
                            android:textColor="@color/background_dark"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/featured_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="310dp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/linearLayout"
                        android:background="@color/card_color4" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:text="@string/most_viewe_location"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingLeft="160dp"
                        android:text="@string/view_all"
                        android:textSize="15sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mostviewed_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="310dp"
                    android:layout_centerVertical="true"
                    android:background="@color/background_dark" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/catagories"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:paddingStart="160dp"
                            android:text="@string/view_all"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/catagories_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="190dp"
                        android:background="@color/background_medium" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.drawerlayout.widget.DrawerLayout>